# TGBot

./: .gitignore  QUICKSTART.md  README.md  package-lock.json  ЗАПУСК_БЭКЕНДА.bat  ЗАПУСК_ФРОНТЕНДА.bat  КАК_ЗАПУСТИТЬ.txt  ФИНАЛЬНАЯ_ИНСТРУКЦИЯ.md
back/: .env  BACKEND_SETUP.md  README_ЗАПУСК.txt  START_SERVER.md  ai_search.py  config.py  database.py  fill_sample_data.py  google_places.py  main.py  places_repository.py  pyproject.toml  repository.py  requirements.txt  schemas.py  tasks.db  test_api.py  test_menu_api.py  ДИАГНОСТИКА_МЕНЮ.md  ИЗМЕНЕНИЯ.md
front/: .firebaserc  FRONTEND_SETUP.md  angular.json  firebase.json  package-lock.json  package.json  ИСПРАВЛЕНИЕ_URL.md
front/.firebase/: hosting.ZGlzdFxUR0JvdFxicm93c2Vy.cache
front/src/: index.html  styles.css
front/src/app/: app.component.ts  app.routes.ts
front/src/app/pages/chat/: chat.ts
front/src/app/pages/infopage/: infopage.ts
front/src/app/pages/mainpage/: mainpage.ts
front/src/app/pages/place/: place.ts
front/src/app/pages/placedetails/: place-details.ts
front/src/app/services/: info.ts  places.service.ts  telegram.ts
front/src/environments/: environment.prod.ts  environment.ts
src/: index.html
src/app/: app.spec.ts  app.ts
